# cppStaticAOP

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
AOP_src/: AOP.hpp  CMakeLists.txt  SourceLocation.hpp
AOP_test/: AOP_test.cpp  AOP_test.hpp  CMakeLists.txt
